<?xml version="1.0"?>
<package>
  <name>graph_planning</name>
  <version>0.2.3</version>
  <description>Graph Planning package</description>

  <maintainer email="indraneelrajeevpatil@gmail.com">Indraneel Patil</maintainer>
  <author email="indraneelrajeevpatil@gmail.com">Indraneel Patil</author>

  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>nav_2_0_common_msgs</build_depend>
  <build_depend>gor_map_server</build_depend>
  <build_depend>realtime_tools</build_depend>

  <run_depend>stage_ros</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>map_server</run_depend>
  <run_depend>teb_local_planner</run_depend>
  <run_depend>global_planner</run_depend>
  <run_depend>dstar_lite</run_depend>
  <run_depend>robot_localization</run_depend>
  <run_depend>butler_control_interface</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>nav_2_0_common_msgs</run_depend>
  <run_depend>gor_map_server</run_depend>
  <run_depend>realtime_tools</run_depend>
  
  <!--  <run_depend>amcl</run_depend>-->


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>

</package>
